plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id "com.diffplug.spotless" version "8.1.0"
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-cache'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

	runtimeOnly 'org.postgresql:postgresql'
	implementation 'org.flywaydb:flyway-database-postgresql'

	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.1'

	implementation 'org.apache.commons:commons-lang3'

	implementation 'com.giffing.bucket4j.spring.boot.starter:bucket4j-spring-boot-starter:0.14.0'
	implementation 'javax.cache:cache-api'
	implementation 'com.github.ben-manes.caffeine:caffeine'
	implementation 'com.github.ben-manes.caffeine:jcache'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'

	testImplementation 'org.testcontainers:postgresql:1.21.4'
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter:2.0.3'
	testImplementation 'io.rest-assured:rest-assured:6.0.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

sourceSets {
    e2e {
        java.srcDirs = ['src/e2e/java']
        resources.srcDirs = ['src/e2e/resources']
        compileClasspath += sourceSets.main.output + sourceSets.test.output
        runtimeClasspath += sourceSets.main.output + sourceSets.test.output
    }
}

configurations {
    e2eImplementation.extendsFrom testImplementation
    e2eRuntimeOnly.extendsFrom testRuntimeOnly
}

task e2eTest(type: Test) {
    description = 'Runs the end-to-end tests.'
    group = 'verification'
    testClassesDirs = sourceSets.e2e.output.classesDirs
    classpath = sourceSets.e2e.runtimeClasspath
    useJUnitPlatform()
    maxParallelForks = 1
}

tasks.named('test') {
	useJUnitPlatform()
}

spotless {
    java {
        googleJavaFormat()
    }
}
